--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,6 +80,11 @@ body {
     gap: 32px;
 }
 
+.home .informations .list-and-games li {
+    display: flex;
+    gap: 32px;
+}
+
 .home .informations .title {
     font-family: 'Chalet';
     font-size: 18px;
@@ -101,7 +106,7 @@ body {
 
 }
 
-.btn-plataform{
+.btn-plataform {
     color: #fff;
     width: 100%;
     cursor: pointer;
@@ -178,7 +183,7 @@ body {
     opacity: 0;
 }
 
-.buy-now .btn-plataform .plataforms.active{
+.buy-now .btn-plataform .plataforms.active {
     display: flex;
     opacity: 1;
 }
@@ -194,6 +199,7 @@ body {
 .buy-now .btn-plataform .plataforms li:nth-child(1):hover {
     background-color: #00439c;
 }
+
 .buy-now .btn-plataform .plataforms li:nth-child(2) {
     border: 1px solid #387a26;
 }
@@ -217,6 +223,7 @@ body {
 .buy-now .btn-plataform .plataforms li:nth-child(4):hover {
     background-color: #387a26;
 }
+
 .buy-now .btn-plataform .plataforms li:nth-child(5) {
     border: 1px solid #fcaf17;
 }
@@ -224,4 +231,3 @@ body {
 .buy-now .btn-plataform .plataforms li:nth-child(5):hover {
     background-color: #fcaf17;
 }
-
